Updated manifests for random route and build pack

--- a/XOM Demos/RestExample/manifest.yml
+++ b/XOM Demos/RestExample/manifest.yml
@@ -2,11 +2,9 @@
 applications:
 
 - name: RestExample
-
   memory: 256M
-
   instances: 1
-
-  host: restexample-XXXXX
-
   path: target/RestExample.war
+  random-route: true
+  buildpack: java_buildpack
+  
