--- a/XOM Demos/LogExample/manifest.yml
+++ b/XOM Demos/LogExample/manifest.yml
@@ -3,5 +3,7 @@ applications:
 - name: LogExample
   memory: 256M
   instances: 1
-  host: logexample-XXXXX
   path: target/LogExample.war
+  random-route: true
+  buildpack: java_buildpack
+  
