--- a/XOM Demos/nodejs/manifest.yml
+++ b/XOM Demos/nodejs/manifest.yml
@@ -2,11 +2,7 @@
 applications:
 
 - name: nodejs-example
-
   memory: 256M
-
   instances: 1
-
-  random-route: false
-
-  host: nodejs-xom-XXXXX
+  random-route: true
+  buildpack: nodejs_buildpack
