Updated manifests with random-route

--- a/XOM Jar Storage/LogExample-1/manifest.yml
+++ b/XOM Jar Storage/LogExample-1/manifest.yml
@@ -3,5 +3,6 @@ applications:
 - name: LogExample
   memory: 256M
   instances: 1
-  host: logexample-XXXXX
   path: LogExample.war
+  random-route: true
+  buildpack: java_buildpack
