--- a/XOM Jar Storage/DatabaseExample-3/manifest.yml
+++ b/XOM Jar Storage/DatabaseExample-3/manifest.yml
@@ -3,9 +3,8 @@ applications:
 
 - name: DatabaseExample
   memory: 256M
-
   instances: 1
-
-  host: dbexample-XXXXX
-
   path: DatabaseExample.war
+  random-route: true
+  buildpack: java_buildpack
+  
