--- a/XOM Jar Storage/RestExample-2/manifest.yml
+++ b/XOM Jar Storage/RestExample-2/manifest.yml
@@ -2,11 +2,8 @@
 applications:
 
 - name: RestExample
-
   memory: 256M
-
   instances: 1
-
-  host: restexample-XXXXX
-
   path: RestExample.war
+  random-route: true
+  buildpack: java_buildpack
